✅ Versión estable: WebSocket, combis cercanas, ajustes finales

--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ PORT=3000
 TRACCAR_URL=http://44.243.38.48:8082
 TRACCAR_USER=admin@gmail.com
 TRACCAR_PASS=admin
+PGHOST=localhost
+PGPORT=5433
+PGUSER=miruta_user
+PGPASSWORD=miruta123
+PGDATABASE=miruta
+
